# django-custom-auth-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
src/: wait_for_db.py
src/auth_service/: settings.py  urls.py
src/core/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/core/management/commands/: seed_db.py
src/core/migrations/: 0001_initial.py
